`Added Tailwind CSS configuration and styles, updated font families and added new utility classes`

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/public/css/style.css">
-</head>
-<body>
-    <h1 class="font-bold">Hallo World</h1>
-</body>
+    <link rel="stylesheet" href="/public/css/style.css" />
+  </head>
+  <body class="mx-3">
+    <div class="hero h-screen content-center items-center justify-center">
+      <div class="hero-content relative w-full h-96 flex flex-col justify-center items-center">
+        <img class="absolute inset-0 w-full h-full object-cover -z-10 bg-black" src="" alt="#" />
+        <p class="font-serif text-xl text-white w-full text-center">eternal love studio.</p>
+        <p class="font-sans text-xs text-white w-full text-center">BALI, INDONESIA</p>
+      </div>
+    </div>
+  </body>
 </html>
