--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -5,8 +5,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mine.css">
 </head>
 <body>
-    <h1>Contact Us</h1>
+    <div class="background"></div>
+
+    <div class="section bg-yellow-200 h-screen"> <!-- Ensure the parent container takes up the full height -->
+        <div class="flex flex-row h-full">           
+            <!-- Right Section -->
+            <div class="w-1/3">
+                <div class="flex flex-col justify-center">
+                    <div class="text-sm">
+                        <p>Wedding</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w-2/3">
+                <div class="flex flex-col"> 
+                    <div class="h-3/4 p-1 md:p-2">
+                        <img class="mt-1" src="/public/image/1.jpg" alt="Image description"> <!-- Add meaningful alt text -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+
+    <div class="section bg-blue-100">
+        <img class="mt-1" src="/public/image/2.jpg" alt="">
+    </div>
+    <div class="section bg-white">
+        <img class="mt-2" src="/public/image/3.jpg" alt="">
+    </div>
+    <div class="text-reveal">
+        <div class="line">Line 1</div>
+        <div class="line">Line 2</div>
+        <div class="line">Line 3</div>
+    </div>
+
+
+  <script src="js/gsap.min.js"></script>
+  <script src="js/TextPlugin.min.js"></script>
+  <script src="js/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollSmoother.min.js"></script>
+  <script>
+        // Register GSAP Plugins
+        gsap.registerPlugin(ScrollTrigger);
+
+        document.addEventListener("DOMContentLoaded", () => {
+        // Section fade-in and pinning
+        const sections = gsap.utils.toArray(".section");
+
+        sections.forEach((section, index) => {
+            // Fade-in effect
+            gsap.fromTo(
+            section,
+            { opacity: 1, y: 50 }, // Initial state
+            {
+                opacity: 1,
+                y: 0,
+                duration: 1,
+                scrollTrigger: {
+                trigger: section,
+                start: "top 80%",
+                toggleActions: "play none none reverse",
+                },
+            }
+            );
+
+            // Pin the section for a scrolling effect
+            ScrollTrigger.create({
+            trigger: section,
+            start: "top top",
+            end: "+=100%",
+            delay: 10,
+            pin: true,
+            pinSpacing: false,
+            });
+        });
+
+        // Background parallex effect
+        gsap.to(".background", {
+            yPercent: 0,
+            ease: 50,
+            scrollTrigger: {
+            trigger: ".background",
+            start: "top bottom",
+            end: "bottom top",
+            scrub: true,
+            },
+        });
+
+        // Text reveal with staggered animation
+        gsap.utils.toArray(".text-reveal").forEach((text) => {
+            const lines = text.querySelectorAll(".line");
+            gsap.from(lines, {
+            y: 100,
+            opacity: 0,
+            duration: 1,
+            stagger: 0.2,
+            scrollTrigger: {
+                trigger: text,
+                start: "top 85%",
+                toggleActions: "play none none reverse",
+            },
+            });
+        });
+        });
+
+
+  </script>
 </body>
 </html>
