--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -5,33 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mine.css">
 </head>
 <body class="bg-gray-900">
-    <h1 class="header font-sans text-center m-5 text-xl text-gray-200 font-bold">Welcome to Portfolio</h1>
-    <div class="box bg-green-600 h-10 w-10 m-5 rounded-sm"></div>
+    <div class="trigger">
+        <div class="hero"></div>
+      <div class="extra-trigger">
+        <div class="card-container">
+          <div class="card-wrapper">
+            <div class="card"></div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card"></div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card"></div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card"></div>
+          </div>
+        </div>
+      </div>
+        </div>
+      
+      <section style="height:500vh">
+        <h1>Extra space just for demo, remove this</h1>
+      </section>
 
 
     <script src="js/gsap.min.js"></script>
     <script src="js/TextPlugin.min.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", (event) => {
-            gsap.registerPlugin(ScrollTrigger, TextPlugin);
 
-            let split = new TextPlugin("h1", {type: "chars"} )
-            gsap.from(split.chars, {
-                duration:1,
-                yPercent: 100,
-                opacity: 0,
-                stragger: 0.05,
+            gsap.registerPlugin(ScrollTrigger);
+            console.clear(); // Start with a clean console on refesh 
+            const cardWrappers = gsap.utils.toArray(".card-wrapper");
+
+            const scaleMax = gsap.utils.mapRange(1, document.querySelectorAll(".card").length - 1, 0.8, 1);  // Convert values we know to values we want https://gsap.com/docs/v3/GSAP/UtilityMethods/mapRange()
+            const time = 2; 
+
+            gsap.set(cardWrappers, { // Set up the cards styling
+            y: (index) => 30 * index, // set offset
+                transformOrigin: "center top", 
             })
 
+            //--------------------------------//
+            // The animation 
+            //--------------------------------//
+            const tl = gsap.timeline({
+            defaults:{
+                ease: "none"
+            },
+            scrollTrigger:{
+                trigger: ".trigger",
+                start: "top top",
+                end: `${window.innerHeight * 5} top`,
+                scrub: true, 
+                // pin: true,
+                markers: true,
+            }
+            });
+            tl.from('.card-container',{ // Move the card stack from the bottom of the screen
+            y: () => window.innerHeight/2,
+            duration: 1,
+            })
+            // Animte cards up from off screen one by one.
+            tl.from(".card-wrapper:not(:first-child)", {
+            y: () => window.innerHeight,
+            duration: time/2,
+            stagger: time
+            });
 
-            gsap.to(".box", {
-            rotation: 360,
-            duration: 4,
+            // 
+            tl.to(
+            ".card-wrapper:not(:last-child)",
+            {
+                rotationX: -20,
+                // scale: (index) => scaleMax(index), 
+                stagger: {
+                each: time
+                }
+            },
+            "<" // Start tween when the first cards has done animating
+            );
+
+
+            ScrollTrigger.refresh(); // Refresch ScrollTrigger to get all the values
+            const end = tl.scrollTrigger.end;
+
+            ScrollTrigger.create({ // Extra ScrollTrigger just for pinning
+            trigger: ".extra-trigger",
+            start: "top top",
+            end: () => end, // Set the end the same as the previous ScrollTrigger
+            pin: true,
+            markers: { startColor: "fuchsia", endColor: "fuchsia" }
+            });
+
         } )
 
-        });
+
 
 
     </script>
