--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eternal Love Studio</title>
-    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="mx-3 overflow-x-hidden">
     <div class="fixed w-full h-screen z-[-1]"></div>
