--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="portfolio hero h-screen content-center items-center justify-center">
       <div class="hero-content relative w-full h-96 flex flex-col justify-center items-center">
         <div class="absolute bg-black opacity-40 w-full h-full"></div>
-        <video class="absolute inset-0 w-full h-full object-cover -z-10 bg-black" src="/public/image/Capture Services LTD_Emily & Jack_Highlight Film 4-6min_V2_Preview_1080p.mp4" autoplay muted loop></video>
+        <video class="absolute inset-0 w-full h-full object-cover -z-10 bg-black" src="image/Capture Services LTD_Emily & Jack_Highlight Film 4-6min_V2_Preview_1080p.mp4" autoplay muted loop></video>
         <p class="font-serif z-20 text-2xl tracking-tight text-white w-full text-center">eternal love studio.</p>
         <p class="font-sans z-20 text-xs text-white w-full text-center">BALI, INDONESIA</p>
       </div>
@@ -24,8 +24,8 @@
       <div class="portfolio">
         <div class="row bg-white h-screen flex flex-row justify-between items-center content-center">
           <a href="https://youtu.be/jeVtVgkzKks" target="_blank" class="relative py-3 col h-screen w-full flex justify-center items-center">
-            <video class="absolute py-3 h-full object-cover cursor-pointer" src="/public/image/top_1_rev.mp4" autoplay muted loop></video>
-            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="/public/image/top_1_bw.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer" src="image/top_1_rev.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="image/top_1_bw.mp4" autoplay muted loop></video>
           </a>
           <div class="col h-full w-full flex flex-col justify-center px-5 gap-5">
             <p class="font-serif text-4xl text-center px-5">Nathan & Amber</p>
@@ -40,16 +40,16 @@
               <p class="font-serif text-2xl">Tiarn & Jordan</p>
               <p class="font-sans">A timeless celebration of love, Tiarn and Jordan's wedding beautifully blends classic vintage charm with a touch of modern elegance, captured with grace and efficiency.</p>
             </a>
-            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer z-10" src="/public/image/top_2.mp4" autoplay muted loop></video>
-            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer opacity-100 hover:opacity-0 duration-300 z-20" src="/public/image/top_2_bw.mp4" autoplay muted loop></video>
+            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer z-10" src="image/top_2.mp4" autoplay muted loop></video>
+            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer opacity-100 hover:opacity-0 duration-300 z-20" src="image/top_2_bw.mp4" autoplay muted loop></video>
           </div>
         </div>
       </div>
       <div class="portfolio">
         <div class="row bg-white h-screen flex flex-row justify-between items-center content-center">
           <a href="https://www.youtube.com/watch?v=fiDLHNxo-Sw" target="_blank" class="relative py-3 col h-screen w-full flex justify-center items-center">
-            <video class="absolute py-3 h-full object-cover cursor-pointer" src="/public/image/top_3.mp4" autoplay muted loop></video>
-            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="/public/image/top_3_bw.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer" src="image/top_3.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="image/top_3_bw.mp4" autoplay muted loop></video>
           </a>
           <div class="col h-full w-full flex flex-col justify-center px-5 gap-5">
             <p class="font-serif text-4xl text-center px-5">Bradley & Wales</p>
@@ -63,7 +63,7 @@
     <div class="footer w-full h-screen">
       <div class="footer-content w-full h-screen flex flex-col justify-center items-center">
         <div class="show-more text-serif">
-          <a class="rounded-xl py-2 px-3 outline outline-gray-700 outline-2 hover:underline" href="/public/more-portfolio.html">Show More Portfolio</a>
+          <a class="rounded-xl py-2 px-3 outline outline-gray-700 outline-2 hover:underline" href="more-portfolio.html">Show More Portfolio</a>
         </div>
 
         <p class="pt-52 px-5 font-serif text-xl text-center w-5/6 italic">
