--- a/public/more-portfolio.html
+++ b/public/more-portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eternal Love Studio - More Portfolio</title>
-    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="relative z-[1]">
     <div class="absolute w-full" style="z-index: 2">
@@ -15,7 +15,7 @@
     <div class="absolute grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 z-0">
       <!-- Video Item -->
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
-        <video src="/public/image/top_3.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
+        <video src="image/top_3.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Bradley & Wales</span>
         </div>
@@ -23,35 +23,35 @@
 
       <!-- Repeat for each video -->
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
-        <video src="/public/image/top_2_bw.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
+        <video src="image/top_2_bw.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Tiarn & Jordan</span>
         </div>
       </div>
 
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
-        <video src="/public/image/top_1_rev.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
+        <video src="image/top_1_rev.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Nathan & Amber</span>
         </div>
       </div>
 
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
-        <video src="/public/image/jonathan kyra.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
+        <video src="image/jonathan kyra.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Jonathan & Kyra</span>
         </div>
       </div>
 
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
-        <video src="/public/image/Adam Sharee.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
+        <video src="image/Adam Sharee.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Adam & Sharee</span>
         </div>
       </div>
 
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
-        <video src="/public/image/Jenna Matt.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
+        <video src="image/Jenna Matt.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Jenna & Matt</span>
         </div>
