--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
 
         <div class="row bg-white h-screen flex flex-col md:flex-row justify-between items-center content-center">
           <a href="https://youtu.be/jeVtVgkzKks" target="_blank" class="relative py-3 col h-1/2 md:h-screen w-full flex justify-center items-center">
-            <video class="absolute py-3 h-full object-cover cursor-pointer" src="/public/image/top_1_rev.mp4" autoplay muted loop></video>
-            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="/public/image/top_1_bw.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer" src="image/top_1_rev.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="image/top_1_bw.mp4" autoplay muted loop></video>
 
           </a>
           <div class="col h-1/2 md:h-full w-full flex flex-col justify-center px-5 gap-5">
@@ -51,8 +51,8 @@
 
         <div class="row bg-white h-screen flex flex-col md:flex-row justify-between items-center content-center">
           <a href="https://www.youtube.com/watch?v=fiDLHNxo-Sw" target="_blank" class="relative py-3 col h-1/2 md:h-screen w-full flex justify-center items-center">
-            <video class="absolute py-3 h-full object-cover cursor-pointer" src="/public/image/top_3.mp4" autoplay muted loop></video>
-            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="/public/image/top_3_bw.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer" src="image/top_3.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="image/top_3_bw.mp4" autoplay muted loop></video>
 
           </a>
           <div class="col h-1/2 md:h-full w-full flex flex-col justify-center px-5 gap-5">
