--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <p class="pt-52 px-5 font-serif text-xl text-center w-5/6 italic">
-          eternal love studio is Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore voluptatem facere velit quod officiis rem sapiente quo inventore, exercitationem, tempora, nostrum debitis impedit sit eum?
+          eternal love is a studio that help wedding studios worldwide turn raw footage into stunning, cinematic stories—saving you time and elevating your work effortlessly.
         </p>
         <p class="pt-52 font-extrabold">BLOG, INSTAGRAM, NEWS, CONTACT</p>
       </div>
