Update: Detail portfolio, contact us, fix scroll animation, routing and hyrlink

--- a/public/more-portfolio.html
+++ b/public/more-portfolio.html
@@ -14,48 +14,62 @@
     <!-- Content -->
     <div class="absolute grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 z-0">
       <!-- Video Item -->
+      <a href="/public/detail-portfolio.html">
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
         <video src="image/top_3.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Bradley & Wales</span>
         </div>
       </div>
+      </a>
 
       <!-- Repeat for each video -->
+      <a href="/public/detail-portfolio.html">
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
         <video src="image/top_2_bw.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Tiarn & Jordan</span>
         </div>
       </div>
+      </a>
 
+      <a href="/public/detail-portfolio.html">
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
         <video src="image/top_1_rev.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Nathan & Amber</span>
         </div>
       </div>
+      </a>
 
+      <a href="/public/detail-portfolio.html">
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
         <video src="image/jonathan kyra.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Jonathan & Kyra</span>
         </div>
       </div>
+      </a>
 
+      <a href="/public/detail-portfolio.html">
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
         <video src="image/Adam Sharee.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Adam & Sharee</span>
         </div>
       </div>
+      </a>
 
+      <a href="/public/detail-portfolio.html">
       <div class="relative overflow-hidden h-[calc(100vh-5rem)] cursor-pointer group">
         <video src="image/Jenna Matt.mp4" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105" autoplay muted loop></video>
         <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 opacity-0 transition-opacity duration-300 group-hover:opacity-100">
           <span class="text-white text-xl font-serif">Jenna & Matt</span>
         </div>
       </div>
+      </a>
+
+      
     </div>
   </body>
 </html>
