Update Routing hyperlink per page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eternal Love Studio</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
 
   </head>
   <body class="mx-3 overflow-x-hidden">
@@ -14,7 +14,7 @@
     <div class="portfolio hero h-screen content-center items-center justify-center" >
       <div class="hero-content relative w-full h-96 flex flex-col justify-center items-center portfolio-text">
         <div class="absolute bg-black opacity-40 w-full h-full"></div>
-        <video class="absolute inset-0 w-full h-full object-cover -z-10 bg-black" src="image/Capture Services LTD_Emily & Jack_Highlight Film 4-6min_V2_Preview_1080p.mp4" autoplay muted loop></video>
+        <video class="absolute inset-0 w-full h-full object-cover -z-10 bg-black" src="public/image/Capture Services LTD_Emily & Jack_Highlight Film 4-6min_V2_Preview_1080p.mp4" autoplay muted loop></video>
         <p class="font-serif z-20 text-2xl tracking-tight text-white w-full text-center " >eternal love studio.</p>
         <p class="font-sans z-20 text-xs text-white w-full text-center ">BALI, INDONESIA</p>
       </div>
@@ -26,7 +26,7 @@
 
         <div class="row bg-white h-screen flex flex-col md:flex-row justify-between items-center content-center">
           <a href="https://www.youtube.com/watch?v=jeVtVgkzKks&feature=youtu.be" target="_blank" class="relative py-3 col h-1/2 md:h-screen w-full flex justify-center items-center">
-            <video class="absolute py-3 h-full object-cover cursor-pointer" src="image/top_1_rev.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer" src="public/image/top_1_rev.mp4" autoplay muted loop></video>
             <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="image/top_1_bw.mp4" autoplay muted loop></video>
 
           </a>
@@ -43,7 +43,7 @@
               <p class="font-serif text-2xl">Tiarn & Jordan</p>
               <p class="font-sans text-center w-1/2 px-5 md:px-32">A timeless celebration of love, Tiarn and Jordan's wedding beautifully blends classic vintage charm with a touch of modern elegance, captured with grace and efficiency.</p>
             </a>
-            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer z-10" src="image/top_2.mp4" autoplay muted loop></video>
+            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer z-10" src="public/image/top_2.mp4" autoplay muted loop></video>
             <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer opacity-100 hover:opacity-0 duration-300 z-20" src="image/top_2_bw.mp4" autoplay muted loop></video>
           </div>
         </div>
@@ -53,12 +53,12 @@
         <div class="row bg-white h-screen flex flex-col md:flex-row justify-between items-center content-center">
           <a href="https://www.youtube.com/watch?v=fiDLHNxo-Sw" target="_blank" class="relative py-3 col h-1/2 md:h-screen w-full flex justify-center items-center">
             <video class="absolute py-3 h-full object-cover cursor-pointer" src="image/top_3.mp4" autoplay muted loop></video>
-            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="image/top_3_bw.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="public/image/top_3_bw.mp4" autoplay muted loop></video>
 
           </a>
           <div class="col h-1/2 md:h-full w-full flex flex-col justify-center px-5 gap-5 portfolio-text">
             <p class="font-serif text-4xl text-center px-5">Bradley & Wales</p>
-            <p class="font-sans text-2xl text-center px-5 md:px-32">Bradley and Wales' wedding is a simple yet elegant celebration, featuring a timeless style and joyful moments that can be cherished by everyone.</p>
+            <p class="font-sans  text-center px-5 md:px-32">Bradley and Wales' wedding is a simple yet elegant celebration, featuring a timeless style and joyful moments that can be cherished by everyone.</p>
           </div>
         </div>
       </div>
@@ -68,26 +68,26 @@
     <div class="footer w-full h-screen">
       <div class="footer-content w-full h-screen flex flex-col justify-center items-center portfolio-text">
         <div class="show-more text-serif fade-up">
-          <a class="rounded-xl py-2 px-3 outline outline-gray-700 outline-2 hover:underline " href="more-portfolio.html">Show More Portfolio</a>
+          <a class="rounded-xl py-2 px-3 outline outline-gray-700 outline-2 hover:underline " href="public/more-portfolio.html">Show More Portfolio</a>
         </div>
 
-        <p class="pt-52 px-5 font-serif text-xl text-center w-1/2 italic fade-up">
+        <p class="pt-52 px-5 font-serif text-center w-1/2 italic fade-up text-2xl">
           eternal love is a studio that help wedding studios worldwide turn raw footage into stunning, cinematic stories—saving you time and elevating your work effortlessly.
         </p>
         <div class="flex pt-52 gap-2 fade-up">
           <a href="" class="font-extrabold  text-black">BLOG</a>
           <a href="" class="font-extrabold  text-black">INSTAGRAM</a>
-          <a href="contact-us.html" class="font-extrabold  text-black">CONTACT</a>          
+          <a href="public/contact-us.html" class="font-extrabold  text-black">CONTACT</a>          
         </div>        
       </div>
     </div>
 
 
     
-    <script src="js/gsap.min.js"></script>
-    <script src="js/TextPlugin.min.js"></script>
-    <script src="js/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollSmoother.min.js"></script>
+    <script src="public/js/gsap.min.js"></script>
+    <script src="public/js/TextPlugin.min.js"></script>
+    <script src="public/js/ScrollTrigger.min.js"></script>
+    <script src="public/https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollSmoother.min.js"></script>
     <script>
       // Register GSAP Plugins
       gsap.registerPlugin(ScrollTrigger);
