--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -9,10 +9,10 @@
 </head>
 <body class="bg-gray-100">
     <div class="absolute w-full" style="z-index: 2">
-        <a href="index.html" class="text-black font-bold px-5 py-5 flex text-right">eternallovestudio.</a>
+        <a href="../index.html" class="text-black font-bold px-5 py-5 flex text-right">eternallovestudio.</a>
     </div>
 
-    <section class="py-10 bg-white sm:py-16 lg:py-24">
+    <section class=" h-screen py-10 bg-white sm:py-16 lg:py-24">
         <div class="max-w-6xl px-4 mx-auto sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:items-stretch md:grid-cols-2 gap-x-12 lg:gap-x-20 gap-y-10">
                 <div class="flex flex-col justify-between lg:py-5">
