--- a/public/more-portfolio.html
+++ b/public/more-portfolio.html
@@ -8,7 +8,7 @@
   </head>
   <body class="relative z-[1]">
     <div class="absolute w-full" style="z-index: 2">
-      <a href="index.html" class="text-white font-bold px-5 py-5 flex text-center">eternallovestudio.</a>
+      <a href="../index.html" class="text-white font-bold px-5 py-5 flex text-center">eternallovestudio.</a>
     </div>
 
     <!-- Content -->
