Update: Animation, conatct form fucntionality, email send

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row bg-white h-screen flex flex-col md:flex-row justify-between items-center content-center">
           <a href="https://www.youtube.com/watch?v=jeVtVgkzKks&feature=youtu.be" target="_blank" class="relative py-3 col h-1/2 md:h-screen w-full flex justify-center items-center">
             <video class="absolute py-3 h-full object-cover cursor-pointer" src="public/image/top_1_rev.mp4" autoplay muted loop></video>
-            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="image/top_1_bw.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="public/image/top_1_bw.mp4" autoplay muted loop></video>
 
           </a>
           <div class="col h-1/2 md:h-full w-full flex flex-col justify-center px-5 gap-5 portfolio-text">
@@ -44,7 +44,7 @@
               <p class="font-sans text-center w-1/2 px-5 md:px-32">A timeless celebration of love, Tiarn and Jordan's wedding beautifully blends classic vintage charm with a touch of modern elegance, captured with grace and efficiency.</p>
             </a>
             <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer z-10" src="public/image/top_2.mp4" autoplay muted loop></video>
-            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer opacity-100 hover:opacity-0 duration-300 z-20" src="image/top_2_bw.mp4" autoplay muted loop></video>
+            <video class="absolute inset-0 py-3 h-full w-full object-cover cursor-pointer opacity-100 hover:opacity-0 duration-300 z-20" src="public/image/top_2_bw.mp4" autoplay muted loop></video>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
 
         <div class="row bg-white h-screen flex flex-col md:flex-row justify-between items-center content-center">
           <a href="https://www.youtube.com/watch?v=fiDLHNxo-Sw" target="_blank" class="relative py-3 col h-1/2 md:h-screen w-full flex justify-center items-center">
-            <video class="absolute py-3 h-full object-cover cursor-pointer" src="image/top_3.mp4" autoplay muted loop></video>
+            <video class="absolute py-3 h-full object-cover cursor-pointer" src="public/image/top_3.mp4" autoplay muted loop></video>
             <video class="absolute py-3 h-full object-cover cursor-pointer hover:opacity-0 duration-300" src="public/image/top_3_bw.mp4" autoplay muted loop></video>
 
           </a>
