--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eternal Love Studio</title>
     <link rel="stylesheet" href="public/css/style.css" />
+    <!-- favicon -->
+      <link rel="icon" type="image/png" href="public/image/android-chrome-512x512.png" sizes="32x32" />
+
 
   </head>
   <body class="mx-3 overflow-x-hidden">
