--- a/public/detail-portfolio.html
+++ b/public/detail-portfolio.html
@@ -6,6 +6,7 @@
     <title>Eternal Love Studio - More Portfolio</title>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/mine.css"/>
+    <link rel="icon" type="image/png" href="image/android-chrome-512x512.png" sizes="32x32" />
 </head>
 <body class="relative z-[1] bg-black overflow-auto">
     <div class="absolute w-full" style="z-index: 2">
