--- a/public/contact-us.html
+++ b/public/contact-us.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/style.css"/>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <!-- AOS CSS -->
+        <link rel="icon" type="image/png" href="image/android-chrome-512x512.png" sizes="32x32" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
