--- a/public/more-portfolio.html
+++ b/public/more-portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eternal Love Studio - More Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/png" href="image/android-chrome-512x512.png" sizes="32x32" />
     <!-- AOS CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
